@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2003-2007, 2009 - TortoiseSVN
+// Copyright (C) 2003-2007, 2009, 2011 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -47,8 +47,6 @@ void CToolAssocDlg::DoDataExchange(CDataExchange* pDX)
         if (m_sExtension.Find('/')<0)
         {
             m_sExtension.TrimLeft(_T("*"));
-            m_sExtension.TrimLeft(_T("."));
-            m_sExtension = _T(".") + m_sExtension;
         }
     }
 }
